# code-samples

./: .gitignore  README.md
benchmarks/: README.md
benchmarks/go/: go.mod  go.sum  signable_starknet.go  signable_starknet_test.go  structs.go
benchmarks/python/: .gitignore  api_client.py  api_client_utils.py  api_config.py  bench_order_sign.py  paradex_api_utils.py  requirements.txt
examples/: Dockerfile  README.md  message_hash.md  message_hash.py  onboarding.py  requirements.txt  utils.py
examples/go/: README.md  constants.go  go.mod  go.sum  onboarding.go  pyth_price_update_via_ws.go  signable_starknet.go  structs.go  utils.go
examples/java/: README.md  auth.groovy  order.groovy
examples/onboarding/: README.md  example.py
examples/python/: README.md  fetch_l2_acc_details.py  (+9 more)
go/: README.md  constants.go  eip712.go  example.go  go.mod  go.sum  onboarding.go  signable_starknet.go  signable_starknet_test.go  structs.go  utils.go
java/: README.md  order.groovy
onboarding/: Dockerfile  README.md
paraclear/: README.md  get_balance_onchain.py  requirements.txt
python/: README.md  README_JP.md  bench_order_sign.py  fetch_l2_acc_details.py  get_trades.py  message_hash.md  message_hash.py  onboarding.py  onboarding_hd.py  paradex.py  post_order.py  pyproject.toml  requirements.txt  transfer_l2_usdc.py  utils.py  utils_hd.py  withdraw.py
python/helpers/: account.py  typed_data.py  utils.py
python/shared/: api_client.py  api_client_utils.py  api_config.py  paradex_api_utils.py
rust/: Cargo.toml  README.md
typescript/: README.md  package.json
(+17 files in other folders)
