[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.2",
    "cairo-lang==0.12.0",
    "eth-account==0.10.0",
    "ledgereth==0.9.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "starknet-crypto-py==0.1.0",
    "starknet-py==0.22.0",
    "web3==6.11.3",
    "websocket>=0.2.1",
    "websockets>=14.1",
]
